// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapping a Jest test 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "test.js:4",
              "name": "mock",
              "static": true,
              "type": "function",
            },
          ],
          "name": "test",
          "type": "class",
        },
      ],
      "name": "http-client-appmap-node-test",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "test",
      "event": "call",
      "id": 1,
      "lineno": 4,
      "method_id": "mock",
      "parameters": [],
      "path": "test.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "http-client-appmap-node-test",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "jest recording finished is checked in request finish callback",
    "recorder": {
      "name": "jest",
      "type": "tests",
    },
    "source_location": "test.js",
    "test_status": "succeeded",
  },
  "version": "1.12",
}
`;

exports[`mapping http client requests (ESM) 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "esm.mjs:6",
              "name": "makeRequest",
              "static": true,
              "type": "function",
            },
          ],
          "name": "esm",
          "type": "class",
        },
      ],
      "name": "http-client-appmap-node-test",
      "type": "package",
    },
  ],
  "eventUpdates": {
    "2": {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 1,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
  },
  "events": [
    {
      "defined_class": "esm",
      "event": "call",
      "id": 1,
      "lineno": 6,
      "method_id": "makeRequest",
      "parameters": [],
      "path": "esm.mjs",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "return_value": {
        "class": "Promise",
        "object_id": 1,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "event": "call",
      "http_client_request": {
        "headers": {
          "Host": "localhost:27628",
          "Test-Header": "This test header is added after ClientRequest creation",
        },
        "request_method": "GET",
        "url": "http://localhost:27628/endpoint/one",
      },
      "id": 3,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "http_client_response": {
        "headers": {
          "Transfer-Encoding": "chunked",
        },
        "return_value": {
          "class": "[ResponseBody]",
          "value": "Hello World!",
        },
        "status_code": 200,
      },
      "id": 4,
      "parent_id": 3,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "http-client-appmap-node-test",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping http client requests 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "index.js:18",
              "name": "makeRequests",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.js:6",
              "name": "consume",
              "static": true,
              "type": "function",
            },
          ],
          "name": "index",
          "type": "class",
        },
      ],
      "name": "http-client-appmap-node-test",
      "type": "package",
    },
  ],
  "eventUpdates": {
    "12": {
      "elapsed": 31.337,
      "event": "return",
      "id": 12,
      "parent_id": 11,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 7,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
    "16": {
      "elapsed": 31.337,
      "event": "return",
      "id": 16,
      "parent_id": 15,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 9,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
    "20": {
      "elapsed": 31.337,
      "event": "return",
      "id": 20,
      "parent_id": 19,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 12,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
    "3": {
      "elapsed": 31.337,
      "event": "return",
      "id": 3,
      "parent_id": 2,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 2,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
    "4": {
      "elapsed": 31.337,
      "event": "return",
      "id": 4,
      "parent_id": 1,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 3,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
    "8": {
      "elapsed": 31.337,
      "event": "return",
      "id": 8,
      "parent_id": 7,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 5,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
  },
  "events": [
    {
      "defined_class": "index",
      "event": "call",
      "id": 1,
      "lineno": 18,
      "method_id": "makeRequests",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 2,
      "lineno": 6,
      "method_id": "consume",
      "parameters": [
        {
          "class": "ClientRequest",
          "name": "request",
          "object_id": 1,
          "value": "[ClientRequest: GET http://localhost/endpoint/one]",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 3,
      "parent_id": 2,
      "return_value": {
        "class": "Promise",
        "object_id": 2,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 4,
      "parent_id": 1,
      "return_value": {
        "class": "Promise",
        "object_id": 3,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "event": "call",
      "http_client_request": {
        "headers": {
          "Host": "localhost:27628",
          "Test-Header": "This test header is added after ClientRequest creation",
        },
        "request_method": "GET",
        "url": "http://localhost:27628/endpoint/one",
      },
      "id": 5,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "http_client_response": {
        "headers": {
          "Transfer-Encoding": "chunked",
        },
        "return_value": {
          "class": "[ResponseBody]",
          "value": "Hello World!",
        },
        "status_code": 200,
      },
      "id": 6,
      "parent_id": 5,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 7,
      "lineno": 6,
      "method_id": "consume",
      "parameters": [
        {
          "class": "ClientRequest",
          "name": "request",
          "object_id": 4,
          "value": "[ClientRequest: POST http://localhost/endpoint/two?p1=v1&p2=v2]",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 8,
      "parent_id": 7,
      "return_value": {
        "class": "Promise",
        "object_id": 5,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "event": "call",
      "http_client_request": {
        "headers": {
          "Content-Type": "application/json",
          "Host": "localhost:27628",
        },
        "request_method": "POST",
        "url": "http://localhost:27628/endpoint/two",
      },
      "id": 9,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "http_client_response": {
        "headers": {
          "Content-Type": "text/html",
          "Transfer-Encoding": "chunked",
        },
        "status_code": 404,
      },
      "id": 10,
      "parent_id": 9,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 11,
      "lineno": 6,
      "method_id": "consume",
      "parameters": [
        {
          "class": "ClientRequest",
          "name": "request",
          "object_id": 6,
          "value": "[ClientRequest: GET http://localhost/endpoint/three]",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 12,
      "parent_id": 11,
      "return_value": {
        "class": "Promise",
        "object_id": 7,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "event": "call",
      "http_client_request": {
        "headers": {
          "Host": "localhost:27628",
        },
        "request_method": "GET",
        "url": "http://localhost:27628/endpoint/three",
      },
      "id": 13,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "http_client_response": {
        "headers": {
          "Content-Type": "text/html",
          "Transfer-Encoding": "chunked",
        },
        "status_code": 404,
      },
      "id": 14,
      "parent_id": 13,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 15,
      "lineno": 6,
      "method_id": "consume",
      "parameters": [
        {
          "class": "ClientRequest",
          "name": "request",
          "object_id": 8,
          "value": "[ClientRequest: GET http://localhost/endpoint/json/one]",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 16,
      "parent_id": 15,
      "return_value": {
        "class": "Promise",
        "object_id": 9,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "event": "call",
      "http_client_request": {
        "headers": {
          "Host": "localhost:27628",
        },
        "request_method": "GET",
        "url": "http://localhost:27628/endpoint/json/one",
      },
      "id": 17,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "http_client_response": {
        "headers": {
          "Content-Type": "application/json",
          "Transfer-Encoding": "chunked",
        },
        "return_value": {
          "class": "Object",
          "object_id": 10,
          "properties": [
            {
              "class": "String",
              "name": "foo",
            },
            {
              "class": "Number",
              "name": "bar",
            },
          ],
          "value": "{ foo: 'xyz', bar: 1 }",
        },
        "status_code": 200,
      },
      "id": 18,
      "parent_id": 17,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 19,
      "lineno": 6,
      "method_id": "consume",
      "parameters": [
        {
          "class": "ClientRequest",
          "name": "request",
          "object_id": 11,
          "value": "[ClientRequest: GET http://localhost/endpoint/json/two]",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 20,
      "parent_id": 19,
      "return_value": {
        "class": "Promise",
        "object_id": 12,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "event": "call",
      "http_client_request": {
        "headers": {
          "Host": "localhost:27628",
        },
        "request_method": "GET",
        "url": "http://localhost:27628/endpoint/json/two",
      },
      "id": 21,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "http_client_response": {
        "headers": {
          "Content-Type": "application/json",
          "Transfer-Encoding": "chunked",
        },
        "return_value": {
          "class": "[ResponseBody]",
          "value": "{"foo":"0123456789-0123456789-0123456789-012345678... (22 more characters)",
        },
        "status_code": 200,
      },
      "id": 22,
      "parent_id": 21,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "http-client-appmap-node-test",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping mocked http client requests 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "index.js:18",
              "name": "makeRequests",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.js:44",
              "name": "mocked",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.js:6",
              "name": "consume",
              "static": true,
              "type": "function",
            },
          ],
          "name": "index",
          "type": "class",
        },
      ],
      "name": "http-client-appmap-node-test",
      "type": "package",
    },
  ],
  "eventUpdates": {
    "10": {
      "elapsed": 31.337,
      "event": "return",
      "id": 10,
      "parent_id": 9,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 5,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
    "14": {
      "elapsed": 31.337,
      "event": "return",
      "id": 14,
      "parent_id": 13,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 7,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
    "18": {
      "elapsed": 31.337,
      "event": "return",
      "id": 18,
      "parent_id": 17,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 9,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
    "22": {
      "elapsed": 31.337,
      "event": "return",
      "id": 22,
      "parent_id": 21,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 11,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
    "4": {
      "elapsed": 31.337,
      "event": "return",
      "id": 4,
      "parent_id": 3,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 2,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
    "5": {
      "elapsed": 31.337,
      "event": "return",
      "id": 5,
      "parent_id": 2,
      "return_value": {
        "class": "Promise<undefined>",
        "object_id": 3,
        "value": "Promise { undefined }",
      },
      "thread_id": 0,
    },
  },
  "events": [
    {
      "defined_class": "index",
      "event": "call",
      "id": 1,
      "lineno": 44,
      "method_id": "mocked",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 2,
      "lineno": 18,
      "method_id": "makeRequests",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 3,
      "lineno": 6,
      "method_id": "consume",
      "parameters": [
        {
          "class": "OverriddenClientRequest",
          "name": "request",
          "object_id": 1,
          "value": "[ClientRequest: /endpoint/one]",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 4,
      "parent_id": 3,
      "return_value": {
        "class": "Promise",
        "object_id": 2,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 5,
      "parent_id": 2,
      "return_value": {
        "class": "Promise",
        "object_id": 3,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 6,
      "parent_id": 1,
      "thread_id": 0,
    },
    {
      "event": "call",
      "http_client_request": {
        "headers": {
          "Host": "localhost:27628",
          "Test-Header": "This test header is added after ClientRequest creation",
        },
        "url": "http://localhost:27628/endpoint/one",
      },
      "id": 7,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "http_client_response": {
        "headers": {},
        "return_value": {
          "class": "[ResponseBody]",
          "value": "Hello World!",
        },
        "status_code": 200,
      },
      "id": 8,
      "parent_id": 7,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 9,
      "lineno": 6,
      "method_id": "consume",
      "parameters": [
        {
          "class": "OverriddenClientRequest",
          "name": "request",
          "object_id": 4,
          "value": "[ClientRequest: POST /endpoint/two?p1=v1&p2=v2]",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 10,
      "parent_id": 9,
      "return_value": {
        "class": "Promise",
        "object_id": 5,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "event": "call",
      "http_client_request": {
        "headers": {
          "Content-Type": "application/json",
          "Host": "localhost:27628",
        },
        "request_method": "POST",
        "url": "http://localhost:27628/endpoint/two",
      },
      "id": 11,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "http_client_response": {
        "headers": {},
        "return_value": {
          "class": "[ResponseBody]",
          "value": "Hello World!",
        },
        "status_code": 200,
      },
      "id": 12,
      "parent_id": 11,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 13,
      "lineno": 6,
      "method_id": "consume",
      "parameters": [
        {
          "class": "OverriddenClientRequest",
          "name": "request",
          "object_id": 6,
          "value": "[ClientRequest: /endpoint/three]",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 14,
      "parent_id": 13,
      "return_value": {
        "class": "Promise",
        "object_id": 7,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "event": "call",
      "http_client_request": {
        "headers": {
          "Host": "localhost:27628",
        },
        "url": "http://localhost:27628/endpoint/three",
      },
      "id": 15,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "http_client_response": {
        "headers": {
          "Content-Type": "text/html",
        },
        "status_code": 404,
      },
      "id": 16,
      "parent_id": 15,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 17,
      "lineno": 6,
      "method_id": "consume",
      "parameters": [
        {
          "class": "OverriddenClientRequest",
          "name": "request",
          "object_id": 8,
          "value": "[ClientRequest: /endpoint/json/one]",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 18,
      "parent_id": 17,
      "return_value": {
        "class": "Promise",
        "object_id": 9,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "event": "call",
      "http_client_request": {
        "headers": {
          "Host": "localhost:27628",
        },
        "url": "http://localhost:27628/endpoint/json/one",
      },
      "id": 19,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "http_client_response": {
        "headers": {
          "Content-Type": "application/json",
        },
        "status_code": 200,
      },
      "id": 20,
      "parent_id": 19,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 21,
      "lineno": 6,
      "method_id": "consume",
      "parameters": [
        {
          "class": "OverriddenClientRequest",
          "name": "request",
          "object_id": 10,
          "value": "[ClientRequest: /endpoint/json/two]",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 22,
      "parent_id": 21,
      "return_value": {
        "class": "Promise",
        "object_id": 11,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "event": "call",
      "http_client_request": {
        "headers": {
          "Host": "localhost:27628",
        },
        "url": "http://localhost:27628/endpoint/json/two",
      },
      "id": 23,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "http_client_response": {
        "headers": {
          "Content-Type": "application/json",
        },
        "status_code": 200,
      },
      "id": 24,
      "parent_id": 23,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "http-client-appmap-node-test",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;
